--- a/WillFrameworkPro.asmdef
+++ b/WillFrameworkPro.asmdef
@@ -1,3 +1,14 @@
 ﻿{
-  "name": "WillFrameworkPro"
+  "name": "WillFrameworkPro",
+  "rootNamespace": "",
+  "references": [],
+  "includePlatforms": [],
+  "excludePlatforms": [],
+  "allowUnsafeCode": false,
+  "overrideReferences": false,
+  "precompiledReferences": [],
+  "autoReferenced": true,
+  "defineConstraints": [],
+  "versionDefines": [],
+  "noEngineReferences": false
 }
