--- a/WillFrameworkPro.asmdef
+++ b/WillFrameworkPro.asmdef
@@ -1,14 +1,16 @@
 ﻿{
   "name": "WillFrameworkPro",
-  "rootNamespace": "",
+  "rootNamespace": "WillFrameworkPro",
   "references": [],
   "includePlatforms": [],
   "excludePlatforms": [],
   "allowUnsafeCode": false,
-  "overrideReferences": false,
-  "precompiledReferences": [],
-  "autoReferenced": true,
+  "autoReferenced": false,
   "defineConstraints": [],
   "versionDefines": [],
-  "noEngineReferences": false
+  "noEngineReferences": false,
+  "overrideReferences": true,
+  "precompiledReferences": [
+    "nunit.framework.dll"
+  ]
 }
