--- a/WillFrameworkPro.asmdef
+++ b/WillFrameworkPro.asmdef
@@ -1,16 +1,13 @@
 ﻿{
   "name": "WillFrameworkPro",
-  "rootNamespace": "WillFrameworkPro",
   "references": [],
   "includePlatforms": [],
   "excludePlatforms": [],
   "allowUnsafeCode": false,
-  "autoReferenced": false,
+  "overrideReferences": false,
+  "precompiledReferences": ["nunit.framework.dll"],
+  "autoReferenced": true,
   "defineConstraints": [],
   "versionDefines": [],
-  "noEngineReferences": false,
-  "overrideReferences": true,
-  "precompiledReferences": [
-    "nunit.framework.dll"
-  ]
+  "noEngineReferences": false
 }
