--- a/WillFrameworkPro.asmdef
+++ b/WillFrameworkPro.asmdef
@@ -6,7 +6,7 @@
   "allowUnsafeCode": false,
   "overrideReferences": false,
   "precompiledReferences": ["nunit.framework.dll"],
-  "autoReferenced": true,
+  "autoReferenced": false,
   "defineConstraints": [],
   "versionDefines": [],
   "noEngineReferences": false
