--- a/WillFrameworkPro.asmdef
+++ b/WillFrameworkPro.asmdef
@@ -9,6 +9,7 @@
   "allowUnsafeCode": false,
   "overrideReferences": true,
   "precompiledReferences": [
+    "Newtonsoft.Json.dll",
     "nunit.framework.dll"
   ],
   "autoReferenced": false,
