--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "displayName": "WillFrameworkPro",
   "description": "A quick, powerful and user-friendly MVC based framework for developing Unity applications.",
   "version": "1.0.0",
+  "unity": "2022.3",
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com:yaagit/WillFrameworkPro.git"
+  },
   "keywords": [
     "Will",
     "WillFrameworkPro",
