--- a/Runtime/WillFrameworkPro.Runtime.asmdef
+++ b/Runtime/WillFrameworkPro.Runtime.asmdef
@@ -1,5 +1,5 @@
 ﻿{
-  "name": "WillFrameworkPro",
+  "name": "WillFrameworkPro.Runtime",
   "references": [],
   "includePlatforms": [],
   "excludePlatforms": [],
