--- a/Runtime/WillFrameworkPro.Runtime.asmdef
+++ b/Runtime/WillFrameworkPro.Runtime.asmdef
@@ -9,7 +9,8 @@
   "precompiledReferences": [],
   "autoReferenced": true,
   "defineConstraints": [
-    "UNITY_2020_3_OR_NEWER"
+    "UNITY_2020_3_OR_NEWER",
+    "UNITY_INCLUDE_TESTS"
   ],
   "versionDefines": [],
   "noEngineReferences": false
