--- a/package.json
+++ b/package.json
@@ -5,12 +5,7 @@
   "version": "1.0.0",
   "unity": "2022.3",
   "unityRelease": "13f1c1",
-  "keywords": [
-    "Will",
-    "WillFrameworkPro",
-    "Unity Framework",
-    "MVC Framework"
-  ],
+  "keywords": [],
   "author": {
     "name": "Will Chan",
     "email": "willchan@163.com",
