--- a/Runtime/WillFrameworkPro.Runtime.asmdef
+++ b/Runtime/WillFrameworkPro.Runtime.asmdef
@@ -1,6 +1,6 @@
 ﻿{
   "name": "WillFrameworkPro.Runtime",
-  "rootNamespace": "",
+  "rootNamespace": "WillFrameworkPro.Runtime",
   "references": [],
   "includePlatforms": [],
   "excludePlatforms": [],
